chore: implementando busca do paciente pelo nome e ajustes

--- a/src/app/@modules/configuracoes/components/form-dados-clinica/form-dados-clinica.component.html
+++ b/src/app/@modules/configuracoes/components/form-dados-clinica/form-dados-clinica.component.html
@@ -140,7 +140,13 @@
         </ng-container>
         <div class="col-12 d-flex justify-content-end">
           <button type="button" class="btn btn-secondary me-3">limpar</button>
-          <button type="button" class="btn btn-primary">salvar</button>
+          <button type="button" class="btn btn-primary" (click)="updateClinica()" [disabled]="loading">
+            <ng-container *ngIf="loading">
+              <span class="spinner-grow spinner-grow-sm" role="status" aria-hidden="true"></span>
+              <span class="sr-only">Aguarde...</span>
+            </ng-container>
+            <span *ngIf="!loading">salvar</span>
+          </button>
         </div>
       </div>
     </form>
