--- a/src/app/@modules/home/components/card-nova-consulta/detalhes-paciente-home/detalhes-paciente-home.component.html
+++ b/src/app/@modules/home/components/card-nova-consulta/detalhes-paciente-home/detalhes-paciente-home.component.html
@@ -4,15 +4,15 @@
     <hr class="mt-1 mb-2" />
   </div>
   <div class="col-6">
-    <p class="m-0"><span>Data de nasc.: </span></p>
+    <p class="m-0"><span>Nome: </span>{{ paciente?.nome }}</p>
   </div>
   <div class="col-6">
-    <p class="m-0"><span>CPF: </span></p>
+    <p class="m-0"><span>Convênio: </span>{{ paciente?.descConvenio }}</p>
   </div>
   <div class="col-6">
-    <p class="m-0"><span>E-mail: </span></p>
+    <p class="m-0"><span>CPF: </span>{{ paciente?.cpf }}</p>
   </div>
   <div class="col-6">
-    <p class="m-0"><span>Sexo: </span></p>
+    <p class="m-0"><span>Inscri. Convênio: </span>{{ paciente?.nuInscricaoConvenio }}</p>
   </div>
 </div>
