--- a/src/app/shell/notification/notification.component.html
+++ b/src/app/shell/notification/notification.component.html
@@ -48,7 +48,7 @@
   </mat-list>
 </mat-menu>
 
-<app-modal-animation modalID="dados-basicos" modalClass="md-effect-11 pre-cadastro-home" backDrop="true">
+<app-modal-animation modalID="dados-basicos" modalClass="md-effect-11 dados-pendentes" backDrop="true">
   <div class="container md-body">
     <ng-container *ngIf="perfil === 'MEDICO'">
       <app-form-dados-basicos-medico (closeModal)="closeModal($event)"></app-form-dados-basicos-medico>
