--- a/src/app/@modules/cadastro/components/especialidades/table-especialidades/table-especialidades.component.html
+++ b/src/app/@modules/cadastro/components/especialidades/table-especialidades/table-especialidades.component.html
@@ -3,58 +3,56 @@
     <table class="w-100 table-tcc">
       <thead class="text-uppercase">
         <tr>
-          <th scope="col">Nome</th>
           <th scope="col">Descrição</th>
-          <th scope="col">Status</th>
           <th scope="col">Ações</th>
         </tr>
       </thead>
       <tbody>
         <tr *ngFor="let especialidade of especialidades">
-          <td class="td-format">{{ especialidade?.name }}</td>
-          <td class="td-format">{{ especialidade?.perfil }}</td>
-          <td class="td-format">{{ especialidade?.tipoSanguineo }}</td>
+          <td class="td-format">{{ especialidade?.descEspecializacao }}</td>
           <td class="td-format width-td">
-            <div class="overlay-text">
-              <span
-                class="badge bg-primary"
-                [ngClass]="{ 'bg-success': especialidade?.status === 'A', 'bg-danger': especialidade?.status === 'I' }"
-              >
-                {{ especialidade?.status === 'A' ? 'Ativo' : 'Inativo' }}
-              </span>
-            </div>
-            <div class="overlay-button">
-              <button
-                mat-raised-button
-                color="primary"
-                type="button"
-                class="btn-secondary me-2"
-                (click)="openDialog(especialidade)"
-              >
-                <i class="feather icon-edit-2"></i>
-              </button>
-              <button
-                mat-raised-button
-                color="primary"
-                type="button"
-                class="btn-success me-2"
-                *ngIf="especialidade?.status === 'I'"
-              >
-                <i class="feather icon-check-circle"></i>
-              </button>
-              <button
-                mat-raised-button
-                color="primary"
-                type="button"
-                class="btn-danger me-2"
-                *ngIf="especialidade?.status === 'A'"
-              >
-                <i class="feather icon-x"></i>
-              </button>
-            </div>
+            <button
+              mat-raised-button
+              color="primary"
+              type="button"
+              class="btn-secondary me-2"
+              matTooltip="Editar"
+              (click)="modal.show('editar-especialidade')"
+            >
+              <i class="feather icon-edit-2"></i>
+            </button>
+            <button mat-raised-button color="primary" type="button" class="btn-danger me-2" matTooltip="Excluir">
+              <i class="feather icon-x"></i>
+            </button>
           </td>
         </tr>
       </tbody>
     </table>
   </div>
 </div>
+<app-modal-animation modalID="editar-especialidade" modalClass="md-effect-10">
+  <div class="container md-body">
+    <form action="">
+      <div class="row m-0 py-3">
+        <div class="col-12">
+          <h3 class="mt-3 mb-0">Editar especialidade</h3>
+          <hr class="my-1" />
+        </div>
+        <div class="col-md-12">
+          <mat-form-field appearance="outline" class="w-100">
+            <mat-label>Nome</mat-label>
+            <input type="text" matInput placeholder="" autocomplete="off" />
+          </mat-form-field>
+        </div>
+        <div class="row d-flex justify-content-end ms-1 mt-4">
+          <div class="col-2 p-0">
+            <button type="button" class="btn btn-secondary-tcc p-2">limpar</button>
+          </div>
+          <div class="col-2 p-0">
+            <button type="submit" class="btn btn-primary-tcc p-2">salvar</button>
+          </div>
+        </div>
+      </div>
+    </form>
+  </div>
+</app-modal-animation>
