--- a/src/app/@modules/home/components/card-nova-consulta/agendamento-consulta/agendamento-consulta.component.html
+++ b/src/app/@modules/home/components/card-nova-consulta/agendamento-consulta/agendamento-consulta.component.html
@@ -9,16 +9,24 @@
         <hr class="m-0 w-100" />
       </div>
       <div class="col-6">
-        <p class="m-0"><span>Data de nasc.: </span>{{ datas?.paciente?.dtNascimento | date: 'shortDate' }}</p>
-      </div>
-      <div class="col-6">
         <p class="m-0"><span>CPF: </span>{{ datas?.paciente?.cpf | mask: '000.000.000-00' }}</p>
       </div>
       <div class="col-6">
-        <p class="m-0"><span>E-mail: </span>{{ datas?.paciente?.email }}</p>
+        <p class="m-0">
+          <span>Convênio: </span
+          >{{ datas?.paciente?.descConvenio !== undefined ? datas?.paciente?.descConvenio : 'sem registro' }}
+        </p>
       </div>
       <div class="col-6">
-        <p class="m-0"><span>Sexo: </span>{{ datas?.paciente?.sexo === 2 ? 'Feminino' : 'Masculino' }}</p>
+        <p class="m-0">
+          <span>Inscri. Convênio: </span
+          >{{
+            datas?.paciente?.nuInscricaoConvenio !== undefined ? datas?.paciente?.nuInscricaoConvenio : 'sem registro'
+          }}
+        </p>
+      </div>
+      <div class="col-6">
+        <p class="m-0"><span>Telefone: </span>{{ datas?.paciente?.telefone | mask: '(00) 0 0000 0000' }}</p>
       </div>
     </div>
   </div>
@@ -58,7 +66,7 @@
           <mat-form-field appearance="outline" class="w-100">
             <mat-label>Lista de médicos</mat-label>
             <mat-select formControlName="medico" required>
-              <mat-option [value]="medico.id" *ngFor="let medico of medicos">{{ medico.name }}</mat-option>
+              <mat-option [value]="medico.id" *ngFor="let medico of medicos">{{ medico.nome }}</mat-option>
             </mat-select>
             <mat-error>
               <app-error-control-message
@@ -68,20 +76,21 @@
             </mat-error>
           </mat-form-field>
         </div>
+        <div class="col-12">
+          <mat-form-field appearance="outline" class="w-100">
+            <mat-label>Observação <span class="optional">(Opcional)</span></mat-label>
+            <textarea matInput autocomplete="off" formControlName="observacao"></textarea>
+            <!-- formControlName="username"-->
+            <!-- <mat-error>
+                <app-error-control-message [control]="loginForm.controls.username" label="E-mail"></app-error-control-message>
+              </mat-error> -->
+          </mat-form-field>
+        </div>
       </div>
     </form>
   </div>
   <!--/col-12-->
-  <div class="col-12 px-4">
-    <mat-form-field appearance="outline" class="w-100">
-      <mat-label>Observação <span class="optional">(Opcional)</span></mat-label>
-      <textarea matInput autocomplete="off"></textarea>
-      <!-- formControlName="username"-->
-      <!-- <mat-error>
-          <app-error-control-message [control]="loginForm.controls.username" label="E-mail"></app-error-control-message>
-        </mat-error> -->
-    </mat-form-field>
-  </div>
+
   <div class="col-12 d-flex align-items-end justify-content-end pt-3">
     <button mat-stroked-button class="btn btn-outline-secondary" (click)="back()">
       <i class="feather icon-arrow-left"></i>
