--- a/src/app/@modules/paciente/components/table-pacientes/table-pacientes.component.html
+++ b/src/app/@modules/paciente/components/table-pacientes/table-pacientes.component.html
@@ -1,4 +1,4 @@
-<div class="row pt-4">
+<div class="row pt-4 m-0">
   <div class="col-12">
     <table class="w-100 table-tcc">
       <thead class="table-light text-uppercase">
