--- a/src/app/components/form-dados-basicos-medico/form-dados-basicos-medico.component.scss
+++ b/src/app/components/form-dados-basicos-medico/form-dados-basicos-medico.component.scss
@@ -1,10 +1,12 @@
+@import "../../../theme/form";
+
 ::ng-deep {
   .mat-form-field-appearance-outline .mat-form-field-wrapper {
     margin: 0.6em 0 !important;
   }
 
   .mat-form-field-appearance-outline .mat-form-field-infix {
-    padding: 0.8em 0 0.8em 0;
+    padding: 0.8em 0 0.8em 0 !important;
   }
 }
 
