--- a/src/app/components/form-dados-basicos-medico/form-dados-basicos-medico.component.html
+++ b/src/app/components/form-dados-basicos-medico/form-dados-basicos-medico.component.html
@@ -9,13 +9,39 @@
       <hr />
     </div>
 
-    <div class="col-6">
+    <div class="col-12">
       <mat-form-field appearance="outline" class="w-100">
         <mat-label>CRM</mat-label>
         <input type="text" matInput placeholder="Digite seu CRM" autocomplete="off" formControlName="crm" />
         <mat-error>
           <app-error-control-message [control]="form.controls.crm" label="CRM"></app-error-control-message>
         </mat-error>
+      </mat-form-field>
+    </div>
+    <div class="col-12 col-md-4">
+      <mat-form-field appearance="outline" class="w-100">
+        <mat-label>Horário de Entrada</mat-label>
+        <input
+          type="text"
+          matInput
+          autocomplete="off"
+          formControlName="hrEntrada"
+          mask="Hh:m0"
+          [dropSpecialCharacters]="false"
+        />
+      </mat-form-field>
+    </div>
+    <div class="col-12 col-md-4">
+      <mat-form-field appearance="outline" class="w-100">
+        <mat-label>Horário de Saída</mat-label>
+        <input
+          type="text"
+          matInput
+          autocomplete="off"
+          formControlName="hrSaida"
+          mask="Hh:m0"
+          [dropSpecialCharacters]="false"
+        />
       </mat-form-field>
     </div>
 
