--- a/src/app/@modules/paciente/components/table-pacientes/table-pacientes.component.html
+++ b/src/app/@modules/paciente/components/table-pacientes/table-pacientes.component.html
@@ -4,10 +4,8 @@
       <thead class="table-light text-uppercase">
         <tr>
           <th scope="col">Nome</th>
-          <th scope="col">Documento</th>
-          <th scope="col">E-mail</th>
           <th scope="col">Telefone</th>
-          <th scope="col">Status</th>
+          <th scope="col">Sexo</th>
           <th scope="col"></th>
         </tr>
       </thead>
@@ -16,32 +14,18 @@
           <td class="d-flex align-items-center">
             <img [src]="verificaSexoUsuario(paciente?.sexo)" alt="Icon" class="bg-profile d-inline-block" />
             <div class="d-inline-block name-profile">
-              <span class="d-block name">{{ paciente?.name }}</span>
-              <span class="profile">{{ paciente?.perfil }}</span>
+              <span class="d-block name">{{ paciente?.nome }}</span>
+              <span class="profile">{{ paciente?.cpf | mask: '000.000.000-00' }}</span>
             </div>
           </td>
-          <td class="td-format">{{ paciente?.documento }}</td>
-          <td class="td-format">{{ paciente?.email }}</td>
-          <td class="td-format">({{ paciente?.ddd }}) {{ paciente?.telefone }}</td>
-          <td
-            class="td-format"
-            [ngClass]="{ 'f-color-active': paciente?.status == 'A', 'f-color-inactive': paciente?.status == 'I' }"
-          >
-            {{ paciente?.status == 'A' ? 'Ativo' : 'Inativo' }}
-          </td>
+          <td class="td-format">{{ paciente?.telefone | mask: '(00) 0 0000 0000' }}</td>
+          <td class="td-format">{{ paciente?.sexo === 'M' ? 'Masculino' : 'Feminino' }}</td>
           <td class="text-center">
-            <button
-              mat-raised-button
-              color="primary"
-              type="button"
-              class="btn-success px-3 py-0"
-              (click)="openDetails(paciente)"
-            >
-              ver detalhes
-            </button>
+            <button mat-raised-button color="primary" type="button" class="btn-success px-3 py-0">ver detalhes</button>
           </td>
         </tr>
       </tbody>
     </table>
   </div>
 </div>
+<app-loader *ngIf="loading"></app-loader>
