--- a/src/app/@modules/home/components/card-nova-consulta/card-nova-consulta.component.html
+++ b/src/app/@modules/home/components/card-nova-consulta/card-nova-consulta.component.html
@@ -57,27 +57,46 @@
               </div>
               <div class="col-md-12">
                 <mat-form-field appearance="outline" class="w-100">
-                  <mat-label>Datas disponíveis</mat-label>
-                  <mat-select formControlName="data" required>
-                    <mat-option [value]="sexo.id" *ngFor="let sexo of listaSexo">{{ sexo.name }}</mat-option>
-                  </mat-select>
+                  <mat-label>Data</mat-label>
+                  <input type="text" matInput autocomplete="off" formControlName="data" />
                   <mat-error>
                     <app-error-control-message [control]="form.controls.data" label="Data"></app-error-control-message>
                   </mat-error>
                 </mat-form-field>
               </div>
               <div class="col-md-12">
-                <mat-form-field appearance="outline" class="w-100">
-                  <mat-label>Horários disponíveis</mat-label>
-                  <mat-select formControlName="horario" required>
-                    <mat-option [value]="sexo.id" *ngFor="let sexo of listaSexo">{{ sexo.name }}</mat-option>
-                  </mat-select>
-                  <mat-error>
-                    <app-error-control-message [control]="form.controls.horario" label="Horário">
-                    </app-error-control-message>
-                  </mat-error>
-                </mat-form-field>
+                <button
+                  class="btn btn-primary"
+                  type="button"
+                  [disabled]="!form.get('data').valid && !form.get('tipoConsulta').valid"
+                  (click)="getHorariosDiponiveisConsulta()"
+                >
+                  <ng-container *ngIf="loading2">
+                    <span class="spinner-grow spinner-grow-sm" role="status" aria-hidden="true"></span>
+                    <span class="sr-only">Aguarde...</span>
+                  </ng-container>
+                  <span *ngIf="!loading2">Buscar horários</span>
+                </button>
               </div>
+              <ng-container *ngIf="horariosDisponiveis">
+                <div class="col-12">
+                  <h3 class="my-2">Selecione o horário</h3>
+                </div>
+                <div class="col-md-12">
+                  <mat-form-field appearance="outline" class="w-100">
+                    <mat-label>Horários disponíveis</mat-label>
+                    <mat-select formControlName="horario" required>
+                      <mat-option [value]="horario" *ngFor="let horario of horariosDisponiveis">{{
+                        horario
+                      }}</mat-option>
+                    </mat-select>
+                    <mat-error>
+                      <app-error-control-message [control]="form.controls.horario" label="Horário">
+                      </app-error-control-message>
+                    </mat-error>
+                  </mat-form-field>
+                </div>
+              </ng-container>
             </div>
             <!-- <div class="col-12">
               <app-form-debug [form]="form"></app-form-debug>
