--- a/src/app/@modules/home/components/card-nova-consulta/card-nova-consulta.component.scss
+++ b/src/app/@modules/home/components/card-nova-consulta/card-nova-consulta.component.scss
@@ -42,6 +42,15 @@ $f_22: 22px;
   }
 }
 
+::ng-deep .resumo-consulta {
+  .md-content {
+    width: 500px !important;
+    overflow-y: auto !important;
+    overflow-x: hidden !important;
+    border: 1px solid #f5f5f5;
+  }
+}
+
 .bg-procedimento {
   margin: 40px 10px;
   background-color: var(--tcc-bg-container);
